Fix alignment on the last link in the navbar

--- a/app/styles/navbar.less
+++ b/app/styles/navbar.less
@@ -91,14 +91,11 @@
 	}
 }
 
-.navbar-nav li:last-child a {
-	margin-right: 0px;
-}
-
 #avatar {
 	position: relative;
 	display: inline-block;
 	margin-left: 25px;
+	margin-right: 0px;
 	line-height: 60px;
 
 	.square(60px);
